--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recipe_blog",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
