--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "./app.js",  
-      "use": "@vercel/node"  
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)", 
-      "dest": "/"  
-    }
-  ]
+  "builds": [{ "src": "./app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/"  }],
+  "rewrites": [{ "src": "/(.*)", "destination": "/" }]
 }
