--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
-  "builds": [{ "src": "./app.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/"  }],
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./app.js",  // Ajusta la ruta al archivo principal de tu servidor
+      "use": "@now/node"  // Especifica el entorno para ejecutar tu servidor Node.js
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/app.js" },  // Redirige las solicitudes de API
+    { "src": "/uploads/(.*)", "dest": "/public/uploads/$1" },  // Redirige las solicitudes de archivos subidos
+    { "src": "/(.*)", "dest": "/app.js" }  // Redirige todas las demás solicitudes al servidor Node.js
+  ],
+  "env": {
+    "MONGO_URI": "<Tu URI de MongoDB aquí>"  // Agrega tus variables de entorno aquí
+  }
 }
+
